<resources>
    <string name="app_name">LivingRootProject3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="faction_cat_message">Build into industrial and military powerhouse!</string>
    <string name="faction_bird_message">Build a powerful decree to restore your glory!</string>
    <string name="faction_woodland_message">Gain sympathy of the forest denizens to rise up!</string>
    <string name="faction_vagabond_message">Adventure across the land and build your renown.</string>
    <string name="faction_lizard_message">Spread the lizard gospel through sheer force of will.</string>
    <string name="faction_riverfolk_message">Beavers with powerful commercial interests and a massive treasury.</string>
    <string name="faction_duchy_message">Monarchist Moles who builds into an unstoppable late game faction!</string>
    <string name="faction_corvid_message">Criminal ravens with crafty and devious plots.</string>
    <string name="fall_map">Fall Map Selected</string>
    <string name="winter_map">Winter Map Selected</string>
    <string name="lake_map">Lake Map Selected</string>
    <string name="mountain_map">Mountain Map Selected</string>
    <string name="textIntro">Root!</string>
    <string name="cat_faction_head">Cat Faction Head</string>
    <string name="bird_faction_head">Bird Faction Head</string>
    <string name="desc">A game of woodland might and right.</string>
    <string name="vagabond_faction_head">Vagabond Faction Head</string>
    <string name="woodland_faction_head">Woodland Faction Head</string>
    <string name="riverfolk_faction_head">Riverfolk Faction Head</string>
    <string name="lizards_faction_head">Lizards Faction Head</string>
    <string name="crow_faction_head">Crow Faction Head</string>
    <string name="moles_faction_head">Moles Faction Head</string>
    <string name="marquise_de_cat">Marquise de Cat</string>
    <string name="eyrie_dynasties">Eyrie Dynasties</string>
    <string name="vagabond">Vagabond</string>
    <string name="woodland_alliance">Woodland Alliance</string>
    <string name="riverfolk_ncompany">Riverfolk \nCompany</string>
    <string name="lizard_cult">Lizard Cult</string>
    <string name="underground_duchy">Underground Duchy</string>
    <string name="faction_box">Faction</string>
    <string name="btn_favorite">Submit</string>
    <string name="txt_favorite">Your Favorite Faction?</string>
    <string name="corvid_conspiracy">Corvid Conspiracy</string>
    <string name="txt_selectMap">Select a Map:</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="mountain">Mountain</string>
    <string name="lake">Lake</string>
    <string name="btn_randomize">Randomize</string>
    <string name="btn_reset">Reset</string>
    <string name="ClearingsLayout">1 | 2 | 3 | 4 | 5 | 6\n7 | 8 | 9 | 10 | 11 | 12</string>
    <string name="question_favorite_message">\"What\'s your favorite faction?\"</string>
    <string name="txtTitle">Living Root Project</string>
    <string name="boxtxt_lizards">Lizards [2]</string>
    <string name="lizard_piece">Lizard Piece</string>
    <string name="vagabond2_piece">Vagabond2 Piece</string>
    <string name="corvid_piece">Corvid Piece</string>
    <string name="woodland_piece">Woodland Piece</string>
    <string name="vagabond_piece">Vagabond Piece</string>
    <string name="riverfolk_piece">Riverfolk Piece</string>
    <string name="eyrie_piece">Eyrie Piece</string>
    <string name="duchy_piece">Duchy Piece</string>
    <string name="reach_intro">Reach Calculator</string>
    <string name="cat_piece">Cat Piece</string>
    <string name="select_number_of_players">Select Number of Players:</string>
    <string name="boxtxt_corvid">Corvid [3]</string>
    <string name="boxtxt_vagabond2">Vagabond2 [2]</string>
    <string name="boxtxt_woodland">Woodland [3]</string>
    <string name="boxtxt_riverfolk">Riverfolk [5]</string>
    <string name="boxtxt_vagabond">Vagabond [5]</string>
    <string name="boxtxt_eyrie">Eyrie [7]</string>
    <string name="boxtxt_duchy">Duchy [8]</string>
    <string name="boxtxt_cats">Cats [10]</string>
    <string name="total_reach">Total Reach:</string>
    <string name="total_reach_number">0</string>
    <string name="reach_number_text">Number of Players \n 2p: +17 \n 3p: +18 \n 4p: +21 \n 5p: +25 \n 6p: +28</string>
    <string name="btnDate">Choose a time</string>
    <string name="schedule_header">Reserve a game table</string>
    <string name="player_count">Number of Players</string>
    <string name="reserve">Reserve</string>
    <string name="playercount">Add number of players</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="clearing_circle">Clearing Circle</string>
    <string name="board_map">Board Map</string>
    <string name="hint_favorite">Type faction Name</string>
    <string name="click_for_music">Click for Music</string>
    <string-array name="players_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>