<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReachActivity">

    <CheckBox
        android:id="@+id/box_lizards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/boxtxt_lizards"
        app:layout_constraintStart_toEndOf="@+id/box_corvid"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        android:onClick="onCheckboxClicked"
        />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:contentDescription="@string/lizard_piece"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/piece_cult" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:contentDescription="@string/vagabond2_piece"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/piece_vagabond2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/corvid_piece"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/piece_corvid" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:contentDescription="@string/woodland_piece"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/piece_woodland" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/vagabond_piece"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/piece_vagabond" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:contentDescription="@string/riverfolk_piece"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/piece_riverfolk" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:contentDescription="@string/eyrie_piece"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/piece_eyrie" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/duchy_piece"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/piece_duchy" />

    <TextView
        android:id="@+id/txtIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reach_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/cat_piece"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/piece_marquise" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="180dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:entries="@array/players_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNumOfPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select_number_of_players"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/box_corvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/boxtxt_corvid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/box_vagabond2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/boxtxt_vagabond2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/box_lizards"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/box_woodland"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/boxtxt_woodland"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/box_riverfolk"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/box_riverfolk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/boxtxt_riverfolk"
        app:layout_constraintStart_toEndOf="@+id/box_vagabond"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/box_vagabond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/boxtxt_vagabond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/box_eyrie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/boxtxt_eyrie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/box_duchy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/boxtxt_duchy"
        app:layout_constraintEnd_toStartOf="@+id/box_eyrie"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/box_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/boxtxt_cats"
        app:layout_constraintEnd_toStartOf="@+id/box_duchy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:onClick="onCheckboxClicked" />

    <TextView
        android:id="@+id/txtTotalReachLabel"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/total_reach"
        app:layout_constraintEnd_toStartOf="@+id/txtTotalReach"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumOfPlayers" />

    <TextView
        android:id="@+id/txtTotalReach"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="204dp"
        android:layout_marginRight="204dp"
        android:text="@string/total_reach_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/reachNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reach_number_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_lizards"
        app:layout_constraintVertical_bias="0.148" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="backHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_directions"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>