<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/nav_graph" />

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textIntro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment" />

    <ImageView
        android:id="@+id/cat"
        android:layout_width="100dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:contentDescription="@string/cat_faction_head"
        android:onClick="showFaction"
        app:layout_constraintEnd_toStartOf="@+id/bird"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/marquise_icon" />

    <ImageView
        android:id="@+id/bird"
        android:layout_width="100dp"
        android:layout_height="112dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:contentDescription="@string/bird_faction_head"
        android:onClick="showFaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eyrie_icon" />

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIntro" />

    <ImageView
        android:id="@+id/vagabond"
        android:layout_width="100dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/vagabond_faction_head"
        android:onClick="showFaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat"
        app:srcCompat="@drawable/vagabond_icon" />

    <ImageView
        android:id="@+id/woodland"
        android:layout_width="100dp"
        android:layout_height="112dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/woodland_faction_head"
        android:onClick="showFaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/vagabond"
        app:layout_constraintTop_toBottomOf="@+id/bird"
        app:srcCompat="@drawable/woodland_icon" />

    <ImageView
        android:id="@+id/riverfolk"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/riverfolk_faction_head"
        android:onClick="showFaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vagabond"
        app:srcCompat="@drawable/riverfolk_icon" />

    <ImageView
        android:id="@+id/lizard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/lizards_faction_head"
        android:onClick="showFaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/riverfolk"
        app:layout_constraintTop_toBottomOf="@+id/woodland"
        app:srcCompat="@drawable/cult_icon" />

    <ImageView
        android:id="@+id/corvid"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/crow_faction_head"
        android:onClick="showFaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riverfolk"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/corvid_icon" />

    <ImageView
        android:id="@+id/duchy"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/moles_faction_head"
        android:onClick="showFaction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/corvid"
        app:layout_constraintTop_toBottomOf="@+id/lizard"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/duchy_icon" />

    <TextView
        android:id="@+id/txtCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marquise_de_cat"
        app:layout_constraintEnd_toStartOf="@+id/txtBird"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat" />

    <TextView
        android:id="@+id/txtBird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:text="@string/eyrie_dynasties"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bird" />

    <TextView
        android:id="@+id/txtVagabond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vagabond"
        app:layout_constraintEnd_toStartOf="@+id/txtWoodland"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vagabond" />

    <TextView
        android:id="@+id/txtWoodland"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/woodland_alliance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/woodland" />

    <TextView
        android:id="@+id/txtRiverfolk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riverfolk_ncompany"
        app:layout_constraintEnd_toStartOf="@+id/txtLizard"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riverfolk" />

    <TextView
        android:id="@+id/txtLizard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="184dp"
        android:layout_marginRight="184dp"
        android:text="@string/lizard_cult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lizard" />

    <TextView
        android:id="@+id/txtCorvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/corvid_conspiracy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corvid"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtDuchy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underground_duchy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toEndOf="@+id/txtCorvid"
        app:layout_constraintTop_toBottomOf="@+id/duchy"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/box_favorite"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/faction_box"
        android:onClick="askFavorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="@string/hint_favorite" />

    <Button
        android:id="@+id/btn_Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/btn_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/box_favorite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_reach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:clickable="true"
        android:onClick="GoTo_ReachActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_dialer"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/musicBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
        android:contentDescription="@string/click_for_music" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="GoTo_ScheduleActivity"
        app:layout_constraintBottom_toTopOf="@+id/fab_reach"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_today"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>